# shepherd

./: .gitignore  README.md  README_TESTING.md  rpi_setup.sh  setup.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  pull_request_template.md
.github/workflows/: backend-tests.yml  pr-check.yml  tests.yml  (+1 more)
Push2Controller/: app.py  definitions.py  run_tests.sh  utils.py
Shepherd/Tests/: BackendComponentTests  CMakeLists.txt  IntegrationTests  Makefile  Makefile_config  Makefile_transport  MinimalJuceTests  MockTests  README.md  SimpleTests  TRANSPORT_TESTS_README.md  backend_component_makefile  backend_component_tests  backend_component_tests.cpp  integration_example.cpp  integration_makefile  juce_makefile  juce_test_main.cpp  juce_test_musical_context.cpp  midi_transport_tests  midi_transport_tests.cpp  minimal_juce_makefile  minimal_juce_test.cpp  mock_makefile  mock_tests.cpp  mocks.h  run_all_tests.sh  simple_makefile  simple_test.cpp  test_hardware_device.cpp  test_main.cpp  test_musical_context.cpp  transport_config_tests  transport_config_tests.cpp
Shepherd/Tests/MinimalJuceTests.dSYM/Contents/: Info.plist
Shepherd/Tests/MinimalJuceTests.dSYM/Contents/Resources/DWARF/: MinimalJuceTests
Shepherd/Tests/MinimalJuceTests.dSYM/Contents/Resources/Relocations/aarch64/: MinimalJuceTests.yml
planning/: rpi_debugging_strategy.md  rpi_fixes.md  test_transport_separation.md  testing_effort_estimation.md
pyshepherd/: __init__.py  __main__.py  client.py  pyshepherd.py  state_synchronizer.py
pyshepherd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+51 files in other folders)
